Fixed a problem where the height of the grid was too big

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
+  padding: 0;
   margin: 0;
   background-color: #f0f0f0;
   color: white;
@@ -37,7 +38,9 @@ button {
   flex-shrink: 0;
   justify-content: center; /* Centra el contenido horizontalmente dentro del contenedor */
   align-items: center; /* Centra el contenido verticalmente dentro del contenedor */
-  width: 40%; /* Define un ancho en porcentaje */
+  width: 100%;
+  max-width: 40%;
+  
 }
 
 .square {
